# BattleCity

./: CMakeLists.txt
build2/: ALL_BUILD.vcxproj  BattleCity.sln  BattleCity.vcxproj  BattleCity.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build2/BattleCity.dir/Debug/: BattleCity.exe.recipe  BattleCity.ilk
build2/BattleCity.dir/Debug/BattleCity.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build2/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build2/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog
build2/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build2/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BattleCity.sln  BattleCity.vcxproj  BattleCity.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build3/BattleCity.dir/Debug/: BattleCity.exe.recipe  BattleCity.ilk
build3/BattleCity.dir/Debug/BattleCity.tlog/: BattleCity.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build3/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
src/: main.cpp
(+6 files in other folders)
